align clock to climate button and traslate under clock its label

--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -213,7 +213,7 @@
                                         </Button>
                                     </children>
                                 </HBox>
-                        <AnchorPane fx:id="clock" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="clock" prefHeight="200.0" prefWidth="200.0" />
                             </children>
                             <GridPane.margin>
                                 <Insets />
