--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: #d1a29e;" stylesheets="/fxml/stylesheets/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.BaseAppController">
     <children>
         <GridPane layoutX="222.0" layoutY="99.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -44,8 +46,7 @@
                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                     </GridPane.margin>
                                     <children>
-                                        <Text fx:id="pedigreeText" layoutX="160.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                                              text="Clicca su un coniglietto per visualizzarne l'albero genealogico." textAlignment="CENTER" wrappingWidth="320.6689453125">
+                                        <Text fx:id="pedigreeText" layoutX="160.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clicca su un coniglietto per visualizzarne l'albero genealogico." textAlignment="CENTER" wrappingWidth="320.6689453125">
                                             <font>
                                                 <Font size="16.0" />
                                             </font>
@@ -100,15 +101,19 @@
                                 </AnchorPane>
                                 <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                                     <children>
-                                        <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentSummer" prefHeight="60.0" prefWidth="60.0" styleClass="summer-button">
+                                        <Button fx:id="summerButton" disable="true" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentSummer" prefHeight="60.0" prefWidth="60.0" styleClass="summer-button">
                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
+                                                <Insets bottom="10.0" left="10.0" right="5.0" top="30.0" />
                                             </HBox.margin>
                                         </Button>
-                                        <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentWinter" prefHeight="60.0" prefWidth="60.0" styleClass="winter-button">
+                                        <Button fx:id="winterButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#setEnvironmentWinter" prefHeight="60.0" prefWidth="60.0">
                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
+                                                <Insets bottom="10.0" left="5.0" right="10.0" top="30.0" />
                                             </HBox.margin>
+                                 <styleClass>
+                                    <String fx:value="winter-button" />
+                                    <String fx:value="button-clickable" />
+                                 </styleClass>
                                         </Button>
                                     </children>
                                     <GridPane.margin>
@@ -127,6 +132,37 @@
                               </Button>
                            </children>
                         </HBox>
+                        <AnchorPane pickOnBounds="false" styleClass="bunny-information-panel" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
+                           <children>
+                              <GridPane layoutX="43.0" layoutY="-14.0" pickOnBounds="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" styleClass="bunny-information-image" />
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                       <children>
+                                          <Label layoutX="48.0" layoutY="32.0" pickOnBounds="false" text="Il coniglietti iniziali sono caratterizzati da: Pelo Bianco, Pelo Corto, Denti Corti, Orecchie Alte e Salto Basso" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <padding>
+                                                <Insets left="5.0" right="5.0" />
+                                             </padding>
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </GridPane>
+                           </children>
+                           <GridPane.margin>
+                              <Insets bottom="10.0" />
+                           </GridPane.margin>
+                        </AnchorPane>
                             </children>
                      <GridPane.margin>
                         <Insets />
