--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -83,7 +83,7 @@
                             <children>
                                 <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                     <children>
-                                        <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxHeight="200.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#startSimulation" prefHeight="50.0" prefWidth="200.0" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                        <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxHeight="200.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#startSimulation" prefHeight="50.0" prefWidth="200.0" styleClass="button-clickable" text="START" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                             <font>
                                                 <Font name="System Bold" size="24.0" />
                                             </font>
@@ -122,17 +122,21 @@
                                 </HBox>
                         <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
                            <children>
-                               <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" text="2x">
+                               <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" text="2x">
                                  <HBox.margin>
                                     <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
+                                 <styleClass>
+                                    <String fx:value="speedup-button" />
+                                    <String fx:value="button-clickable" />
+                                 </styleClass>
                               </Button>
                            </children>
                         </HBox>
-                        <AnchorPane pickOnBounds="false" styleClass="bunny-information-panel" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
+                        <AnchorPane fx:id="informationPanel" pickOnBounds="false" styleClass="bunny-information-panel" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
                            <children>
                               <GridPane layoutX="43.0" layoutY="-14.0" pickOnBounds="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
@@ -144,7 +148,7 @@
                                 </rowConstraints>
                                  <children>
                                     <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" styleClass="bunny-information-image" />
-                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                    <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                                        <children>
                                           <Label layoutX="48.0" layoutY="32.0" pickOnBounds="false" text="Il coniglietti iniziali sono caratterizzati da: Pelo Bianco, Pelo Corto, Denti Corti, Orecchie Alte e Salto Basso" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <padding>
