--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -148,18 +149,51 @@
                                 </rowConstraints>
                                  <children>
                                     <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" styleClass="bunny-information-image" />
-                                    <AnchorPane pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                    <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                                        <children>
-                                          <Label layoutX="48.0" layoutY="32.0" pickOnBounds="false" text="Il coniglietti iniziali sono caratterizzati da: Pelo Bianco, Pelo Corto, Denti Corti, Orecchie Alte e Salto Basso" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                             <padding>
-                                                <Insets left="5.0" right="5.0" />
-                                             </padding>
+                                          <Label text="Il coniglietti iniziali sono caratterizzati da: " textOverrun="CENTER_ELLIPSIS" wrapText="true" />
+                                          <Label text="· Pelo Bianco">
                                              <font>
-                                                <Font size="15.0" />
+                                                <Font name="System Bold" size="13.0" />
                                              </font>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="· Pelo Corto">
+                                             <font>
+                                                <Font name="System Bold" size="13.0" />
+                                             </font>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="· Orecchie Alte">
+                                             <font>
+                                                <Font name="System Bold" size="13.0" />
+                                             </font>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="· Denti Normali">
+                                             <font>
+                                                <Font name="System Bold" size="13.0" />
+                                             </font>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="· Salto Basso">
+                                             <font>
+                                                <Font name="System Bold" size="13.0" />
+                                             </font>
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
                                           </Label>
                                        </children>
-                                    </AnchorPane>
+                                    </VBox>
                                  </children>
                               </GridPane>
                            </children>
