--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -203,7 +203,7 @@
                 <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2"
                       GridPane.rowIndex="6">
                     <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0"
-                            minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp"
+                            minWidth="50.0" mnemonicParsing="false" onAction="#changeSimulationSpeed"
                             prefHeight="60.0" prefWidth="60.0" text="2x">
                         <HBox.margin>
                             <Insets bottom="30.0" left="10.0" right="10.0" top="10.0"/>
