--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -15,7 +15,7 @@
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="1100.0" style="-fx-background-color: #d1a29e;" stylesheets="/fxml/stylesheets/style.css"
+            prefWidth="1100.0" style="-fx-background-color: #d1a29e;" stylesheets="/stylesheets/style.css"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.unibo.pps.bunny.view.scalaFX.FXControllers.BaseAppController">
 
